--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar-brand {
+  margin-right: 2rem;
+}
+
+.navbar {
+  padding: 1rem 2.5rem
+}
